# src/models/location.ts
@@ -1,0 +1,5 @@
+export interface LocationModel {
+  address: string
+  city: string
+  country: string
+}
